# triple_bot

./: Pipfile  README.md  setup.cfg
triple_bot/: __main__.py  botutils.py  core.py
triple_bot/cogs/: demo.py
triple_bot/extensions/: demo.py  digi.py
