[metadata]
name = triple_bot
version = attr: triple_bot.__version__
description = __bot__
long_description = file: README.md
long_description_content_type = text/markdown
author = SizeDev
author_email = digiduncan@gmail.com
license = GPLv3
license_files = LICENSE
project_urls =
    Source=https://github.com/sizedev/triple_bot
    Tracker=https://github.com/sizedev/triple_bot/issues

[options.entry_points]
console_scripts =
    triple_bot = triple_bot.__main__:main